# GElib

./: .gitignore  .gitmodules  =1.20  =2.10.0  CMakeLists.txt  MANIFEST.in  README.md  SO3CG.html  SO3bipart.html  SO3bivec.html  SO3classes.html  SO3classesB.html  SO3element.html  SO3elementB.html  SO3part.html  SO3partArr.html  SO3partArray.html  SO3partB.html  SO3type.html  SO3vec.html  SO3vecArr.html  SO3vecArray.html  SO3vecB.html  SO3weights.html  SPharm.cu  WignerMatrix.html  abstract.html  common.txt  config.txt  copyright.txt  genindex.html  index.html  index.x.html  intro.html  options.txt  options_template.txt  pyproject.toml  pyproject.toml.new  search.html  searchindex.js  (+1 more)
.github/workflows/: tests.yml  validate_cmake.yml
O3/: O3element.hpp  O3group.hpp  O3index.hpp  O3irrep.hpp  O3part.hpp  O3type.hpp  O3vec.hpp
O3/backup/: O3part.hpp
O3/tests/: CMakeLists.txt  Makefile  testO3element.cpp  testO3irrep.cpp  testO3part.cpp  testO3type.cpp  testO3vec.cpp
SO3/: SO3CGbank.hpp  SO3CGindex.hpp  SO3_CGcoeffs.hpp  SO3element.hpp  SO3group.hpp  SO3irrep.hpp  SO3part.hpp  SO3part_addSpharmFn.hpp  SO3type.hpp  SO3vec.hpp
SO3/abandoned/: SO3part_addSpharmFn.hpp  SO3sphBank.hpp
SO3/functions/: SO3part_addCGproductFn.hpp  SO3part_addCGproduct_back0Fn.hpp  SO3part_addCGproduct_back1Fn.hpp  SO3part_addDiagCGproductFn.hpp  SO3part_addDiagCGproduct_back1Fn.hpp  SO3part_addSpharmFn.hpp
SO3/tests/: CMakeLists.txt  Makefile  testSO3CGcoeffs.cpp  testSO3element.cpp  testSO3irrep.cpp  testSO3part.cpp  testSO3type.cpp  testSO3vec.cpp  test_SO3partG.cpp
_sources/: SO3classes.rst.txt  SO3part.rst.txt
benchmarking/: Makefile  benchmark_CGproduct.cpp  results.tex
core/: BatchedTensor.hpp  CGproduct.hpp  DiagCGproduct.hpp  Gelement.hpp  Gfunctions.hpp  Girrep.hpp  GirrepObj.hpp  Gpart.hpp  Gtype.hpp  Gvec.hpp  TensorUtils.hpp
core/abandoned/: Gfunctions.hpp
core/hold/: Gelement.hpp  GelementObj.hpp
cuda/: GElib_base.cu  GPUtensor.hpp  Generate_SO3part_addCGproduct_kernel_calls.cpp  Generate_SO3part_addCGproduct_subkernels.cpp  Makefile  SO3CGproducts_combo.cu  SO3Fpart_addFproduct.cu  SO3Fpart_addFproduct_back0.cu  SO3Fpart_addFproduct_back1.cu  SO3Fpart_addModsq.cu  SO3partA_CGproduct.cu  SO3partA_DiagCGproduct.cu  SO3partB_addCGproduct.cu  SO3partB_addCGproduct.x.cu  SO3partB_addCGproduct_back0.cu  SO3partB_addCGproduct_back1.cu  SO3partB_addCGsquare.cu  SO3partB_addCGtransform.cu  SO3partB_addDiagCGproduct.cu  SO3partB_addDiagCGproduct_back0.cu  SO3partB_addDiagCGproduct_back1.cu  SO3part_addCGproduct.cu  SO3part_addCGproduct.cu.x  SO3part_addCGproduct_back0.cu  SO3part_addCGproduct_back1.cu  SO3part_addCGproduct_explicit_calls.inc  SO3part_addCGproduct_subkernels.inc  SO3part_addCGtransform.cu  SPharm.cu  cuda_loaders.cu  utils.cu  utils.hpp
cuda/abandoned/: SO3CGproducts_combined.cu
doctrees/: CGproducts.doctree  SO3CG.doctree  SO3bipart.doctree  SO3bivec.doctree  SO3classes.doctree  SO3classesB.doctree  SO3element.doctree  SO3elementB.doctree  SO3part.doctree  SO3partArr.doctree  SO3partArray.doctree  SO3partB.doctree  SO3type.doctree  SO3vec.doctree  SO3vecArr.doctree  SO3vecArray.doctree  SO3vecB.doctree  SO3weights.doctree  WignerMatrix.doctree  abstract.doctree  background.doctree  environment.pickle  index.doctree  index.x.doctree  intro.doctree  junk.doctree
doctrees/abandoned/: SO3element.doctree  SO3part.doctree  SO3partArray.doctree  SO3type.doctree  SO3vec.doctree  SO3vecArray.doctree  index.x.doctree
html/: .buildinfo  CGproducts.html  SO3CG.html  SO3classes.html  SO3element.html  SO3elementB.html  SO3partArr.html  SO3partArray.html  SO3partB.html  SO3type.html  SO3vecArr.html  SO3vecArray.html  SO3vecB.html  SO3weights.html  WignerMatrix.html  abstract.html  background.html  genindex.html  index.html  intro.html  junk.html  objects.inv  search.html  searchindex.js
html/_sources/: SO3CG.rst.txt  SO3bivec.rst.txt  SO3classes.rst.txt  SO3partArr.rst.txt  SO3partB.rst.txt  SO3vecArr.rst.txt  abstract.rst.txt  intro.rst.txt
html/abandoned/: SO3element.html  SO3part.html  SO3partArray.html  SO3type.html  SO3vec.html  SO3vecArray.html  index.x.html
include/: ArithmeticExpr.hpp  BatchedGvecArrayView.hpp  BatchedGvecView.hpp  Factorial.hpp  GElibConfig.hpp  GElibFnTemplates.hpp  GElibLog.hpp  GElibSession.hpp  GElibTimer.hpp  GElib_base.cpp  GElib_base.hpp  Gvec.hpp  GvecArray.hpp  GvecArrayView.hpp  GvecView.hpp
include/abandoned/: BatchedGvec.hpp
include/tests/: Makefile  testLog.cpp
objects/SO2/: SO2FourierMatrixBank.hpp
objects/SO3/: SO3BiPart_array.hpp  SO3BiType.hpp  SO3BiVec_array.hpp  SO3CGproductSignature.hpp  SO3CGtensor.hpp  SO3FourierMatrixBank.hpp  SO3Fpart.hpp  SO3Fpart2_view.hpp  SO3Fpart3_view.hpp  SO3Fpart_addFmodsq_Fn.hpp  SO3Fpart_addFmodsq_back0Fn.hpp  SO3Fpart_addFmodsq_back1Fn.hpp  SO3Fpart_addFproductFn.hpp  SO3Fpart_addFproduct_Fn.hpp  SO3Fpart_addFproduct_back0Fn.hpp  SO3Fpart_addFproduct_back1Fn.hpp  SO3Fvec.hpp  SO3_CGbank.hpp  SO3_CGcoeffs.hpp  SO3_CGindex.hpp  SO3_SPHgen.hpp  SO3_SphCoeffs.hpp  SO3bipart4_view.hpp  SO3element.hpp  SO3irrepAction.hpp  SO3mvec.hpp  SO3mweights.hpp  SO3part.hpp  SO3part2_view.hpp  SO3part3_view.hpp  SO3part4_view.hpp  SO3partA.hpp  SO3partA_accessor.hpp  SO3partArray.hpp  SO3partArrayA.hpp  SO3partArrayC.hpp  SO3partArrayPack.hpp  SO3partArrayPackView.hpp  SO3partArrayView.hpp  SO3partB.hpp  (+25 more)
objects/SO3c/: SO3partC.hpp  SO3partSpec.hpp
objects/SO3d/: GtypeD.hpp  GvecD.hpp  GvecSpec.hpp  HomMapD.hpp  (+7 more)
python/: GElib_py.cpp  SO3Fvec_py.cpp  SO3partArray_py.cpp  SO3partB_py.cpp  SO3partD_py.cpp  SO3part_py.cpp  SO3vecArray_py.cpp  SO3vecB_py.cpp  SO3vecD_py.cpp  SO3vec_py.cpp  cg_product_debugging.py  cg_product_debugging2.py  cg_product_debugging3.py  cg_product_debugging4.py  cg_product_debugging5.py  ctens.py  gelib_torch.py  gelib_torchB.py  gelib_torchB.x.py  gelib_torchC.py  gelib_torchD.py  setup.py  setup.x.py  t.py  t2.py  test2.py  test3.py  test3c.py  test4.py  test5.py  test6.py  test_square_activation_2.py  torch_gelib.py
v2/: NONCOMMERCIAL.txt  common.txt  config.txt
(+523 files in other folders)
